faculty bio info card component, and faculty bio pages complete

--- a/src/components/button-set/_button-set.scss
+++ b/src/components/button-set/_button-set.scss
@@ -4,4 +4,14 @@
 
 .iastate22-button-set {
   margin: rem(20) 0;
+  ul {
+    padding: 0;
+    li {
+      padding-left: 0;
+      text-indent: initial;
+      &::before {
+        display: none;
+      }
+    }
+  }
 }
