--- a/src/components/pages/_additional-pages.scss
+++ b/src/components/pages/_additional-pages.scss
@@ -801,3 +801,58 @@ form.gsc-search-box {
 .gsc-cursor-chevron {
   fill: $iastate-maroon !important;
 }
+
+// Faculty Bio
+.faculty-bio__content {
+  h2 {
+    @extend %h2-yellow-border;
+  }
+}
+
+.faculty-bio__content,
+.faculty-bio__content-bio,
+.faculty-bio__content-education,
+.faculty-bio__content-affiliations {
+  margin-bottom: rem(60);
+}
+
+.faculty-bio__content-education-affiliations-wrap {
+  @include media-breakpoint-up(lg) {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+
+.faculty-bio__content-education,
+.faculty-bio__content-affiliations {
+  @include media-breakpoint-up(lg) {
+    flex: 1 1 0;
+    padding-right: rem(40);
+  }
+}
+
+.faculty-bio__content-education {
+  ul {
+    li {
+      margin-bottom: rem(12);
+      &:last-child {
+        margin-bottom: 0;
+      }
+    }
+  }
+}
+
+.faculty-bio__content-publications {
+  ul {
+    li {
+      padding-left: rem(20);
+      text-indent: rem(-20);
+      margin-bottom: rem(12);
+      &:before {
+        content: "•";
+        padding-right: rem(13);
+        color: $iastate-red;
+      }
+    }
+  }
+}
