--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -60,6 +60,7 @@
 @import "../components/callout-set/callout-set";
 @import "../components/home-announcement/home-announcement";
 @import "../components/ecosystem-home-hero/ecosystem-home-hero";
+@import "../components/faculty-bio-info-card/faculty-bio-info-card";
 @import "../components/privacy-consent/privacy-consent";
 
 // Pages
