site-footer--ecosystem variant progress

--- a/src/components/site-footer/_site-footer.scss
+++ b/src/components/site-footer/_site-footer.scss
@@ -418,3 +418,8 @@
     text-align: center;
   }
 }
+
+// Styles for ecosystem footer variant only
+.site-footer__site-org-contact-info-label {
+  color: $white;
+}
