--- a/src/components/site-footer/site-footer--ecosystem.twig
+++ b/src/components/site-footer/site-footer--ecosystem.twig
@@ -48,7 +48,7 @@
         {% if social_links.flickr %}
         <li>
           <a href="{{ social_links.flickr }}" target="_blank">
-            <i class="fa-brands fa-flickr" aria-hidden="true"></i>
+            <i class="fak fa-iastate22-flickr" aria-hidden="true"></i>
             <span class="visible-for-screen-readers">Flickr</span>
           </a>
         </li>
