--- a/src/components/site-header/site-header--ecosystem.twig
+++ b/src/components/site-header/site-header--ecosystem.twig
@@ -1,8 +1,7 @@
 <header class="site-header site-header--ecosystem">
   <div class="site-header__top">
     <a href="https://www.iastate.edu/" class="site-header__logo">
-      <img class="site-header__logo-mobile" src="{{ "https://cdn.theme.iastate.edu/img/iastate22/iowa-state-university-logo-no-tagline-red.svg"|path }}" alt="Iowa State University">
-      <img class="site-header__logo-desktop" src="{{ "https://cdn.theme.iastate.edu/img/iastate22/iowa-state-university-logo-with-tagline-red.svg"|path }}" alt="Iowa State University of Science and Technology">
+      <img src="{{ "https://cdn.theme.iastate.edu/img/iastate22/iowa-state-university-logo-no-tagline-red.svg"|path }}" alt="Iowa State University">
     </a>
     {% if parent_unit_name %}<div class="site-header__parent-unit-name">{{ parent_unit_name }}</div>{% endif %}
     <div class="site-header__website-title">{{ website_title }}</div>
