--- a/src/components/site-header/site-header--ecosystem.twig
+++ b/src/components/site-header/site-header--ecosystem.twig
@@ -17,6 +17,7 @@
           {% endfor %}
         </ul>
       </nav>
+      {% if search_visible == true %}
       <div class="site-header__search">
         <a href="#site-search" class="site-header__search-toggle">
           <span class="visible-for-screen-readers">Search</span>
@@ -32,6 +33,7 @@
           <button type="submit"><span class="fak fa-iastate22-magnifying-glass" aria-hidden="true"></span><span class="visible-for-screen-readers">Submit Search</span></button>
         </form>
       </div>
+      {% endif %}
       {% if utility_button %}<a class="site-header__utility-button" href="{{ utility_button.url }}">{{ utility_button.title }}<span></span></a>{% endif %}
     </div>
   </div>
