correcting faculty bio page header, adding example pages for ecosystem hero variants

--- a/src/components/site-header/_site-header.scss
+++ b/src/components/site-header/_site-header.scss
@@ -904,6 +904,7 @@
         .site-header--ecosystem & {
           @include media-breakpoint-up(xl) {
             background-color: $off-white;
+            margin-top: rem(29);
           }
         }
         &[aria-hidden="true"] {
