updating ecosystem-home-hero variants to have optional button_set

--- a/src/components/ecosystem-home-hero/ecosystem-home-hero--background-video.twig
+++ b/src/components/ecosystem-home-hero/ecosystem-home-hero--background-video.twig
@@ -5,7 +5,7 @@
   </div>
   <div class="ecosystem-home-hero__content">
     <h1 class="ecosystem-home-hero__title">{{ hero.title }}</h1>
-    {% if hero.button_set %}
+    {% if hero.button_set.items %}
       {% include "@button-set" with hero.button_set %}
     {% endif %}
   </div>
