--- a/src/components/ecosystem-home-hero/ecosystem-home-hero--atmospheric-image.twig
+++ b/src/components/ecosystem-home-hero/ecosystem-home-hero--atmospheric-image.twig
@@ -4,6 +4,8 @@
   </div>
   <div class="ecosystem-home-hero__content">
     <h1 class="ecosystem-home-hero__title">{{ hero.title }}</h1>
+    {% if hero.button_set.items %}
     {% include "@button-set" with hero.button_set %}
+    {% endif %}
   </div>
 </div>
