--- a/src/components/ecosystem-home-hero/_ecosystem-home-hero.scss
+++ b/src/components/ecosystem-home-hero/_ecosystem-home-hero.scss
@@ -89,6 +89,11 @@
   }
 
   .ecosystem-home-hero--background-video & {
+    &:before {
+      @include media-breakpoint-up(md) {
+        padding-top: 56.2%;
+      }
+    }
     iframe {
       position: absolute;
       width: 100%;
