updating card component to be same height regardless of amount of card content

--- a/src/components/card/_card.scss
+++ b/src/components/card/_card.scss
@@ -4,6 +4,7 @@
   text-align: center;
   position: relative;
   z-index: 1;
+  height: 100%;
   &.iastate22-card--linked-image {
     box-shadow: none;
     text-align: left;
